fixed spacings and updated img hover style

--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,7 @@ h2 {
 }
 
 .main-about {
+  justify-content: stretch;
 }
 
 .main-contact {
@@ -63,15 +64,13 @@ h2 {
 
 .highlight {
   /* background: #FFE8C2; */
-  display: inline-block;
   transform: translateY(-2px);
   background: rgb(255,255,255, 0.4);
   font-weight: bold;
-  line-height: 15px;
 }
 
 .alt-highlight {
-  display: inline-block;
+  font-size: 20px;
   transform: translateY(-2px);
   background: rgb(37,53,102, 1);
   color: #ffffff;
@@ -108,6 +107,10 @@ h2 {
   display: block;
   opacity: 0.7;
   margin: 15px auto;
+}
+
+.project-image img:hover {
+  opacity: 1;
 }
 
 .project-description,
